# vermon

./: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md
.github/workflows/: deploy.yaml
scripts/: test-api.sh  test-members.sh
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  refresh.rs  templates.rs
static/: style.css
templates/: docs.html  index.html
